--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "mongoose": "^8.19.2",
-    "nodemailer": "^7.0.10"
+    "resend": "^4.0.0"
   }
 }
